src/pages/Composer/Composer.css
.canvas-wrapper{
    background-color: #495466;
    gap: 0.2rem;
    justify-content: center;
    display: flex;
    border-radius: 0.4rem;
    align-items: center;
    overflow: hidden;
    align-items: center;
    flex-direction: column;
}
select{
    -webkit-appearance: none;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 0 24 24' width='24' fill='white'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z'/%3E%3C/svg%3E");
    background-repeat:no-repeat; 
    background-position: 100%;
}
.instrument-picker{
    display: flex;
    flex-direction: column;
    width: 8rem;
}
.instrument-picker input[type="range"]{
    padding: 0;
    margin:0;
    margin-top: 0.2rem;
}
.right-panel-composer{
    flex: 1;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items:center;
    justify-content: space-between;
    padding-top: 0.2rem;
  }
.note-composer{
    width: 5vw;
    height: 5vw;
    border-width: 0.4vw;
    z-index: 2;
}
.note-composer-sky{
    z-index: 2;
}
.song-info{
    position: fixed;
    bottom: 0.5vw;
    left: calc(4rem + 0.5vw);
    color: white;
    display: flex;
    flex-direction: column;
    gap: 0.2rem;

}
.song-info div{
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 23vw;
}
.top-panel-composer{
    display: flex;
    flex-direction: row;
    justify-content: center;
}
.tool-slim, .tool{
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.3rem;
    border-radius: 0.3rem;
    color: var(--composer-tool);
    background-color: var(--primary);
    cursor: pointer;
}
.tool{
    width: 4vw;
    max-width: 3rem;
}
.tool-icon{
    width: 1.5rem;
}
.tool:hover,.tool-slim:hover{
    filter: brightness(1.1);
}
select{
    cursor: pointer;
}
.settings-row{
    display: flex;
    justify-content: space-between;
    padding: 0.4rem;
    border-radius: 0.2rem;
    background-color: var(--composer-tool);
    color: black;
    align-items: center;
    margin-bottom: 0.4rem;
}
.settings-row div{
    display: flex;
    align-items: center;
}
.not-saved{
    background-color: #ac5d65 !important;
}
.timeline-wrapper{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 100%;
    margin: 0.2rem;
    margin-top: 0;
    align-items: center;
}
.timeline-wrapper :first-child {
    margin:  0.2rem 0;
}
.timeline-button{
    height: 100%;
    width: 2rem;
    margin: 0.2rem;
    padding: 0 0.5rem;
    background-color: rgb(81, 92, 111);
    color: var(--composer-tool);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 0.3rem;
    cursor: pointer;
}
.fill-x{
    width: 100%;
}
.timeline-wrapper canvas{
    width: calc(100% - 6.6rem) !important;
}
.settings-row :is(input,select){
    background-color: var(--primary);
    color: white;
    border: none;
    text-align: center;

    width: 8rem;
    padding: 0.2rem;
    border-radius: 0.2rem;
}
.settings-row :is(input[type=number]),
.settings-row :is(input[type=text])
{
    width: calc(8rem - 7px);
}


.buttons-composer-wrapper, .buttons-composer-wrapper-right{
        display: grid;
        grid-template-rows: repeat(3 , 1fr);
        grid-template-columns: 1fr;
        gap: 0.2rem;
        margin: 0 0.2rem;
}
.buttons-composer-wrapper-right{
    grid-template-rows: repeat(4, 1fr);
}

.tools-half {
    display: grid;
    grid-template-rows: 1fr 1fr;
    gap: 0.2rem;
}
.tools-buttons-wrapper button{
    background-color: #59667b;
    color: white;
    border-radius: 0.2rem;
    padding: 0.5rem 1rem;
    border: none;
    display: flex;
    font-size: 1.2rem;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}
.tools-row{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.tools-row button{
    color: white;
    border-radius: 0.2rem;
    padding: 0.5rem 1rem;
    border: none;
    cursor: pointer;
    background-color: var(--note-text);
}
.tools-buttons-wrapper button:hover{
    filter: brightness(1.1);
  }
.tools-buttons-wrapper button:disabled,
.tools-buttons-wrapper button[disabled]{
    filter: brightness(0.9);
}
.tools-button-highlighted{
    background-color: var(--note-text) !important;
}
.tools-buttons-wrapper{
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(2,1fr);
    flex: 1;
    gap: 0.5rem;
    margin-top: 0.5rem;
}

.floating-tools{
    position: fixed;
    bottom: -45vh;
    display: flex;
    margin-right: auto;
    margin-left: auto;
    height: 45vh;
    overflow: auto;
    width: 60vw;
    border-radius: 0.5rem;
    background-color: var(--primary);
    z-index: 10;
    opacity: 0;
    border: solid 2px var(--secondary);
    transition: all 0.4s;
    transform: scale(0.6);
    padding: 0.5rem;
    flex-direction: column;
    color: white;
}

.tools-visible{
    bottom: 0.5rem;
    transform: scale(1);
    opacity: 1;
}
.bottom-right-wrapper{
    position: fixed;
    right: 0.2rem;
    bottom: 0.2rem;
    width: fit-content;
    display: flex;
    flex-direction: row;
    color: white;
}
.tempo-changers-wrapper{
    flex-direction: column;
    width: 4rem;
    gap: 0.2rem;
    display: flex;

}
.layer-3-ball, .layer-3-ball-bigger{
    position: absolute;
    background-color: #d75c5c;
    width: 1.5vw;
    height: 1.5vw;
    border-radius: 50%;
    visibility: hidden;
}
.bottom-right-text{
    text-align: center;
    width: 100%;
    font-size: 0.8rem;
}
.note-composer img{
    z-index: 2;
}
.layer-1{
    background-color: #d3bd8e !important;
    border-color: #ab9361 !important;
}
.layer-1 svg{
    fill: #AB9361 !important;
}
.layer-1 .note-name{
    color: white !important;
}
.layer-1 img{
    filter: brightness(10) !important;
}
.layer-2, .layer-2 svg{
    border-color: #d75c5c !important;
    fill: #f06868 !important;
}
.layer-3 .layer-3-ball,.layer-3 .layer-3-ball-bigger{
    visibility: visible;
}
.layer-3-ball-bigger{
    width: 2.5vw;
    height: 2.5vw;
}
.note-composer .layer-3-ball-bigger{
    width: 3vw;
    height: 3vw;
}
.note-composer.layer-3 img{
    filter: brightness(10);
}
canvas{
    cursor: pointer !important;
}
.tempo-changers-wrapper button{
    flex: 1;
    border-radius: 0.2rem;
    border: none;
    font-size: 1rem;
    color: white;
    padding: 0.2rem;
    filter: brightness(1.1);
    cursor: pointer;
}
.tempo-changers-wrapper button:hover, .layer-button:hover{
    filter: brightness(1.1);
}
.tempo-changers-wrapper button:focus{
    filter: brightness(1.3);
}
.layer-button{
    border: none;
    width: 8vw;
    max-width: 4rem;
    font-size: 1rem;
    padding: 0.6rem 0;
    flex: 1;
    background-color: var(--primary);
    color: white;
    border-radius: 0.2rem;
    cursor: pointer;
}
.layer-buttons-wrapper{
    display: flex;
    flex-direction: column;
    gap:0.2rem;
    margin-right: 2vw;
    justify-content: center;
}

.floating-midi{
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    bottom: 0.5rem;
    height: 48vh;
    border-radius: 0.5rem;
    padding: 0.8rem;
    background-color: var(--primary);
    border: solid 2px var(--secondary);
    color: white;
    max-width: 60vw;
    min-width: 40vw;
    z-index: 3;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    overflow:auto;

}
.floating-midi *{
    font-size: 0.9rem;
}
.floating-midi::-webkit-scrollbar-thumb {
	background: var(--composer-tool);
	border-radius: 2px;
  }
  /* Handle on hover */
.floating-midi::-webkit-scrollbar-thumb:hover {
	background: #555;
}
.midi-btn,.midi-btn-small,.midi-btn-green{
    background-color: #576377;
    color: white;
    border-radius: 0.2rem;
    padding: 0.5rem 1rem;
    border: none;
    height: -moz-fit-content;
    height: fit-content;
    cursor: pointer;
    min-width: 5rem;
}
.midi-btn-green:active{
    filter: brightness(1.1);
}
.midi-btn-small{
    min-width: unset;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    font-weight: bold;
    height: 2rem;
    width: 2rem;
    font-size: 1.2rem;
}
.midi-btn-green{
    background-color: rgb(98, 140, 131);
}
.midi-btn-green:disabled{
    opacity: 0.8;
    filter: brightness(0.8);
    cursor: not-allowed;
}
.midi-track-data{
    display: flex;
    flex-direction: column;
    margin-top: 0.5rem;
    background-color: #515c6e;
    padding: 0.4rem;
    border-radius: 0.2rem;
}
.midi-track-data-row{
    display: flex;
    flex-direction: row;
    margin-top: 0.2rem;
    justify-content: space-between;
}
.midi-track-wrapper{
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
}
.midi-track-column{
    background: #576377;
    padding: 0.3rem 0.5rem;
    border-radius: 0.2rem;
    display: flex;
    flex-direction: column;
    margin-top: 0.3rem;
    width: 100%;
}
.midi-track-center{
    display: flex;
    align-items: center;
}
.midi-track-center *:not(:last-child){
    margin-right: 0.5rem;
}
.midi-row, .midi-column{
    display:flex;
    flex-direction: row;
    align-items: center;
}
.separator-border{
    margin-bottom: 0.25rem;
    padding-bottom: 0.25rem;
    border-bottom: solid 2px var(--secondary);
}
.midi-column{
    flex-direction: column;
}
.midi-input, .midi-select{
    width: 4rem;
    background-color: #576377;
    border: none;
    height: 1.9rem;
    border-radius: 0.2rem;
    color: white;
    text-align:center;
}
.midi-select{
    width:  5.6rem;
    background-color: #485263; 
    text-align:left;
    padding:0.5rem;
}
@media only screen and (max-width: 900px) {
    .buttons-composer-wrapper, .buttons-composer-wrapper-right {
        flex: 1;
    }
    .floating-tools{
        height: 50vh;
    }
    .tools-buttons-wrapper button{
        font-size: 0.8rem;
    }
    .song-info div{
        max-width: 20vw;
    }
    .floating-midi{
        padding:0.4rem;
        bottom:0.2rem;
        height: 50vh;
        max-width: 70vw;
        width:70vw;
    }
    .song-info{
        font-size: 0.9rem;
    }
    .tool{
        flex: 1;
        width: 100%;
        max-width: unset;
    }
    .button-hitbox{
        padding: 0.7vh;
    }
    .layer-button{
        font-size: 0.7rem;
    }
    .tempo-changers-wrapper button{
        font-size: 0.7rem;
        padding: 0.5rem;
    }
    .note-composer{
        width: 5.5vw;
        height: 5.5vw;
    }
    .keyboard{
        gap: 0rem;
        grid-gap: 0rem;

    }
    .layer-3-ball{
        width: 1.5vw;
        height: 1.5vw;
    }
}
@media only screen and (max-width: 600px) {

    .song-info{
        font-size: 0.8rem;
    }
    .layer-button{
        font-size: 0.8rem;
        padding: unset;
    }
    .tempo-changers-wrapper{
        gap: 0.6vh;
    }
    .tempo-changers-wrapper button{
        font-size: 0.6rem;
    }
}

